#54 Chat popup's z-index issue fixed

--- a/helpdesk-web/src/main/webapp/resources/css/jquery.growl.css
+++ b/helpdesk-web/src/main/webapp/resources/css/jquery.growl.css
@@ -5,7 +5,7 @@
 @import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css");
 
 #growls {
-    z-index: 50000;
+    z-index: 998;
     position: fixed;
 }
 
